# perception_ros

./: .gitignore  README.md  perception_ros_ssh.rosinstall
data/: chair_cad.ply  chair_seg.ply  chair_seg_clean.ply
include/depth_segmentation/: common.h
launch/: robot_perception.launch
perception_ros/: .gitignore  CMakeLists.txt  package.xml
perception_ros/cfg/: pc_gen_param.yaml  seg_param.yaml
perception_ros/data/: chair_cad_sample1.ply
perception_ros/deprecated/: object_search_mapping_sim.launch
perception_ros/include/: common.h  pc_processing.h  pc_seg_generator_node.h
perception_ros/include/depth_segmentation/: common.h  depth_segmentation.h
perception_ros/launch/: object_search_mapping_sim.launch  robot_perception.launch
perception_ros/scripts/: perception_node.py  utils.py
perception_ros/src/: depth_segmentation.cc  image_test.cpp  pc_processing.cc  pc_seg_generator_node.cpp
seg_msgs/: CMakeLists.txt  package.xml
seg_msgs/msg/: Seg.msg
src/: depth_segmentation.cc  obj_align_test.cpp
